# shlink-cli

./: Cargo.toml
src/: main.rs
